xs/modules/parsers/parser-xsodata/src/main/java/com/codbex/kronos/parser/xsodata/core/XSODataParser.java
/*
 * Copyright (c) 2022 codbex or an codbex affiliate company and contributors
 *
 * All rights reserved. This program and the accompanying materials are made available under the
 * terms of the Eclipse Public License v2.0 which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v20.html
 *
 * SPDX-FileCopyrightText: 2022 codbex or an codbex affiliate company and contributors
 * SPDX-License-Identifier: EPL-2.0
 */
// Generated from com/codbex/kronos/parser/xsodata/core/XSOData.g4 by ANTLR 4.13.2
package com.codbex.kronos.parser.xsodata.core;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class XSODataParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
    public static final int T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9, T__9 = 10, T__10 = 11,
            T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17, T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21,
            T__21 = 22, T__22 = 23, T__23 = 24, T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
            T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, T__36 = 37, T__37 = 38, T__38 = 39, T__39 = 40, T__40 = 41,
            T__41 = 42, T__42 = 43, T__43 = 44, T__44 = 45, T__45 = 46, T__46 = 47, T__47 = 48, T__48 = 49, T__49 = 50, T__50 = 51,
            T__51 = 52, T__52 = 53, T__53 = 54, T__54 = 55, T__55 = 56, T__56 = 57, T__57 = 58, T__58 = 59, T__59 = 60, T__60 = 61,
            T__61 = 62, T__62 = 63, T__63 = 64, T__64 = 65, T__65 = 66, T__66 = 67, SEMICOLON = 68, EQ = 69, QUATED_STRING = 70, COMMA = 71,
            COLON = 72, ESC = 73, WS = 74, LINE_COMMENT = 75, COMMENT = 76, INT = 77;
    public static final int RULE_xsOdataDefinition = 0, RULE_service = 1, RULE_namespace = 2, RULE_body = 3, RULE_content = 4,
            RULE_entry = 5, RULE_entity = 6, RULE_object = 7, RULE_catalogobjectschema = 8, RULE_catalogobjectname = 9, RULE_entityset = 10,
            RULE_entitysetname = 11, RULE_with = 12, RULE_withProp = 13, RULE_withoutProp = 14, RULE_propertylist = 15,
            RULE_columnname = 16, RULE_keys = 17, RULE_keylist = 18, RULE_keygenerated = 19, RULE_concurrencytoken = 20,
            RULE_navigates = 21, RULE_navlist = 22, RULE_naventry = 23, RULE_assocname = 24, RULE_navpropname = 25, RULE_fromend = 26,
            RULE_principal = 27, RULE_dependent = 28, RULE_aggregates = 29, RULE_aggregatestuple = 30, RULE_aggregate = 31,
            RULE_aggregatefunction = 32, RULE_parameters = 33, RULE_parameterskeyand = 34, RULE_parameterentitysetname = 35,
            RULE_parametersresultsprop = 36, RULE_modificationBody = 37, RULE_modification = 38, RULE_create = 39, RULE_update = 40,
            RULE_delete = 41, RULE_modificationspec = 42, RULE_modificationaction = 43, RULE_forbidden = 44, RULE_action = 45,
            RULE_events = 46, RULE_eventlist = 47, RULE_eventlistElement = 48, RULE_eventtype = 49, RULE_association = 50,
            RULE_associationdef = 51, RULE_assocrefconstraint = 52, RULE_principalend = 53, RULE_dependentend = 54, RULE_end = 55,
            RULE_endref = 56, RULE_endtype = 57, RULE_joinpropertieslist = 58, RULE_multiplicity = 59, RULE_multiplicityvalue = 60,
            RULE_assoctable = 61, RULE_repoobject = 62, RULE_overprincipalend = 63, RULE_overdependentend = 64, RULE_overend = 65,
            RULE_storage = 66, RULE_nostorage = 67, RULE_storageend = 68, RULE_annotations = 69, RULE_annotationsbody = 70,
            RULE_annotationconfig = 71, RULE_settings = 72, RULE_settingsbody = 73, RULE_settingselement = 74, RULE_supportnull = 75,
            RULE_contentcashecontrol = 76, RULE_metadatacashecontrol = 77, RULE_hints = 78, RULE_hintlist = 79, RULE_hintvalue = 80,
            RULE_nullvalue = 81, RULE_limits = 82, RULE_limitvalue = 83, RULE_maxrecords = 84, RULE_maxexpandedrecords = 85;

    private static String[] makeRuleNames() {
        return new String[] {"xsOdataDefinition", "service", "namespace", "body", "content", "entry", "entity", "object",
                "catalogobjectschema", "catalogobjectname", "entityset", "entitysetname", "with", "withProp", "withoutProp", "propertylist",
                "columnname", "keys", "keylist", "keygenerated", "concurrencytoken", "navigates", "navlist", "naventry", "assocname",
                "navpropname", "fromend", "principal", "dependent", "aggregates", "aggregatestuple", "aggregate", "aggregatefunction",
                "parameters", "parameterskeyand", "parameterentitysetname", "parametersresultsprop", "modificationBody", "modification",
                "create", "update", "delete", "modificationspec", "modificationaction", "forbidden", "action", "events", "eventlist",
                "eventlistElement", "eventtype", "association", "associationdef", "assocrefconstraint", "principalend", "dependentend",
                "end", "endref", "endtype", "joinpropertieslist", "multiplicity", "multiplicityvalue", "assoctable", "repoobject",
                "overprincipalend", "overdependentend", "overend", "storage", "nostorage", "storageend", "annotations", "annotationsbody",
                "annotationconfig", "settings", "settingsbody", "settingselement", "supportnull", "contentcashecontrol",
                "metadatacashecontrol", "hints", "hintlist", "hintvalue", "nullvalue", "limits", "limitvalue", "maxrecords",
                "maxexpandedrecords"};
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[] {null, "'service'", "'namespace'", "'{'", "'}'", "'entity'", "'.'", "'as'", "'with'", "'without'", "'('", "')'",
                "'keys'", "'key'", "'generate'", "'local'", "'concurrencytoken'", "'navigates'", "'from'", "'principal'", "'dependent'",
                "'aggregates'", "'always'", "'of'", "'SUM'", "'AVG'", "'MIN'", "'MAX'", "'parameters'", "'via'", "'and'", "'results'",
                "'property'", "'create'", "'update'", "'delete'", "'using'", "'forbidden'", "'events'", "'before'", "'after'",
                "'precommit'", "'postcommit'", "'association'", "'referential'", "'constraint'", "'multiplicity'", "'\"1\"'", "'\"0..1\"'",
                "'\"1..*\"'", "'\"*\"'", "'over'", "'no'", "'storage'", "'on'", "'annotations'", "'enable'", "'OData4SAP'", "'settings'",
                "'support'", "'null'", "'content'", "'cache-control'", "'metadata'", "'hints'", "'limits'", "'max_records'",
                "'max_expanded_records'", "';'", "'='", null, "','", "':'"};
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[] {null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, "SEMICOLON", "EQ", "QUATED_STRING", "COMMA", "COLON", "ESC",
                "WS", "LINE_COMMENT", "COMMENT", "INT"};
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "XSOData.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public XSODataParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class XsOdataDefinitionContext extends ParserRuleContext {
        public ServiceContext service() {
            return getRuleContext(ServiceContext.class, 0);
        }

        public AnnotationsContext annotations() {
            return getRuleContext(AnnotationsContext.class, 0);
        }

        public SettingsContext settings() {
            return getRuleContext(SettingsContext.class, 0);
        }

        public XsOdataDefinitionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_xsOdataDefinition;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XSODataListener)
                ((XSODataListener) listener).enterXsOdataDefinition(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XSODataListener)
                ((XSODataListener) listener).exitXsOdataDefinition(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XSODataVisitor)
                return ((XSODataVisitor<? extends T>) visitor).visitXsOdataDefinition(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final XsOdataDefinitionContext xsOdataDefinition() throws RecognitionException {
        XsOdataDefinitionContext _localctx = new XsOdataDefinitionContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_xsOdataDefinition);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(172);
                service();
                setState(174);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__54) {
                    {
                        setState(173);
                        annotations();
                    }
                }

                setState(177);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__57) {
                    {
                        setState(176);
                        settings();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ServiceContext extends ParserRuleContext {
        public BodyContext body() {
            return getRuleContext(BodyContext.class, 0);
        }

        public NamespaceContext namespace() {
            return getRuleContext(NamespaceContext.class, 0);
        }

        public ServiceContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_service;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XSODataListener)
                ((XSODataListener) listener).enterService(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XSODataListener)
                ((XSODataListener) listener).exitService(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XSODataVisitor)
                return ((XSODataVisitor<? extends T>) visitor).visitService(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final ServiceContext service() throws RecognitionException {
        ServiceContext _localctx = new ServiceContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_service);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(179);
                match(T__0);
                setState(181);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__1) {
                    {
                        setState(180);
                        namespace();
                    }
                }

                setState(183);
                body();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class NamespaceContext extends ParserRuleContext {
        public TerminalNode QUATED_STRING() {
            return getToken(XSODataParser.QUATED_STRING, 0);
        }

        public NamespaceContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_namespace;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XSODataListener)
                ((XSODataListener) listener).enterNamespace(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XSODataListener)
                ((XSODataListener) listener).exitNamespace(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XSODataVisitor)
                return ((XSODataVisitor<? extends T>) visitor).visitNamespace(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final NamespaceContext namespace() throws RecognitionException {
        NamespaceContext _localctx = new NamespaceContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_namespace);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(185);
                match(T__1);
                setState(186);
                match(QUATED_STRING);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class BodyContext extends ParserRuleContext {
        public ContentContext content() {
            return getRuleContext(ContentContext.class, 0);
        }

        public BodyContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_body;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XSODataListener)
                ((XSODataListener) listener).enterBody(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XSODataListener)
                ((XSODataListener) listener).exitBody(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XSODataVisitor)
                return ((XSODataVisitor<? extends T>) visitor).visitBody(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final BodyContext body() throws RecognitionException {
        BodyContext _localctx = new BodyContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_body);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(188);
                match(T__2);
                setState(190);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__4 || _la == T__42 || _la == QUATED_STRING) {
                    {
                        setState(189);
                        content();
                    }
                }

                setState(192);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ContentContext extends ParserRuleContext {
        public EntryContext entry() {
            return getRuleContext(EntryContext.class, 0);
        }

        public ContentContext content() {
            return getRuleContext(ContentContext.class, 0);
        }

        public ContentContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_content;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XSODataListener)
                ((XSODataListener) listener).enterContent(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XSODataListener)
                ((XSODataListener) listener).exitContent(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XSODataVisitor)
                return ((XSODataVisitor<? extends T>) visitor).visitContent(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final ContentContext content() throws RecognitionException {
        ContentContext _localctx = new ContentContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_content);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(194);
                entry();
                setState(196);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__4 || _la == T__42 || _la == QUATED_STRING) {
                    {
                        setState(195);
                        content();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class EntryContext extends ParserRuleContext {
        public EntityContext entity() {
            return getRuleContext(EntityContext.class, 0);
        }

        public AssociationContext association() {
            return getRuleContext(AssociationContext.class, 0);
        }

        public EntryContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_entry;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XSODataListener)
                ((XSODataListener) listener).enterEntry(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XSODataListener)
                ((XSODataListener) listener).exitEntry(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XSODataVisitor)
                return ((XSODataVisitor<? extends T>) visitor).visitEntry(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final EntryContext entry() throws RecognitionException {
        EntryContext _localctx = new EntryContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_entry);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(200);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case T__4:
                    case QUATED_STRING: {
                        setState(198);
                        entity();
                    }
                        break;
                    case T__42: {
                        setState(199);
                        association();
                    }
                        break;
                    default:
                        throw new NoViableAltException(this);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class EntityContext extends ParserRuleContext {
        public ObjectContext object() {
            return getRuleContext(ObjectContext.class, 0);
        }

        public TerminalNode SEMICOLON() {
            return getToken(XSODataParser.SEMICOLON, 0);
        }

        public EntitysetContext entityset() {
            return getRuleContext(EntitysetContext.class, 0);
        }

        public WithContext with() {
            return getRuleContext(WithContext.class, 0);
        }

        public KeysContext keys() {
            return getRuleContext(KeysContext.class, 0);
        }

        public ConcurrencytokenContext concurrencytoken() {
            return getRuleContext(ConcurrencytokenContext.class, 0);
        }

        public NavigatesContext navigates() {
            return getRuleContext(NavigatesContext.class, 0);
        }

        public AggregatesContext aggregates() {
            return getRuleContext(AggregatesContext.class, 0);
        }

        public ParametersContext parameters() {
            return getRuleContext(ParametersContext.class, 0);
        }

        public ModificationBodyContext modificationBody() {
            return getRuleContext(ModificationBodyContext.class, 0);
        }

        public EntityContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_entity;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XSODataListener)
                ((XSODataListener) listener).enterEntity(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XSODataListener)
                ((XSODataListener) listener).exitEntity(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XSODataVisitor)
                return ((XSODataVisitor<? extends T>) visitor).visitEntity(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final EntityContext entity() throws RecognitionException {
        EntityContext _localctx = new EntityContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_entity);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(202);
                object();
                setState(204);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__6) {
                    {
                        setState(203);
                        entityset();
                    }
                }

                setState(207);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__7 || _la == T__8) {
                    {
                        setState(206);
                        with();
                    }
                }

                setState(210);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__11 || _la == T__12) {
                    {
                        setState(209);
                        keys();
                    }
                }

                setState(213);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__15) {
                    {
                        setState(212);
                        concurrencytoken();
                    }
                }

                setState(216);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__16) {
                    {
                        setState(215);
                        navigates();
                    }
                }

                setState(219);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__20) {
                    {
                        setState(218);
                        aggregates();
                    }
                }

                setState(222);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__27) {
                    {
                        setState(221);
                        parameters();
                    }
                }

                setState(225);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 60129542144L) != 0)) {
                    {
                        setState(224);
                        modificationBody();
                    }
                }

                setState(227);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ObjectContext extends ParserRuleContext {
        public CatalogobjectnameContext catalogobjectname() {
            return getRuleContext(CatalogobjectnameContext.class, 0);
        }

        public CatalogobjectschemaContext catalogobjectschema() {
            return getRuleContext(CatalogobjectschemaContext.class, 0);
        }

        public ObjectContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_object;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XSODataListener)
                ((XSODataListener) listener).enterObject(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XSODataListener)
                ((XSODataListener) listener).exitObject(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XSODataVisitor)
                return ((XSODataVisitor<? extends T>) visitor).visitObject(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final ObjectContext object() throws RecognitionException {
        ObjectContext _localctx = new ObjectContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_object);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(230);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__4) {
                    {
                        setState(229);
                        match(T__4);
                    }
                }

                setState(235);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 15, _ctx)) {
                    case 1: {
                        setState(232);
                        catalogobjectschema();
                        setState(233);
                        match(T__5);
                    }
                        break;
                }
                setState(237);
                catalogobjectname();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class CatalogobjectschemaContext extends ParserRuleContext {
        public TerminalNode QUATED_STRING() {
            return getToken(XSODataParser.QUATED_STRING, 0);
        }

        public CatalogobjectschemaContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_catalogobjectschema;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XSODataListener)
                ((XSODataListener) listener).enterCatalogobjectschema(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XSODataListener)
                ((XSODataListener) listener).exitCatalogobjectschema(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XSODataVisitor)
                return ((XSODataVisitor<? extends T>) visitor).visitCatalogobjectschema(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final CatalogobjectschemaContext catalogobjectschema() throws RecognitionException {
        CatalogobjectschemaContext _localctx = new CatalogobjectschemaContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_catalogobjectschema);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(239);
                match(QUATED_STRING);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class CatalogobjectnameContext extends ParserRuleContext {
        public TerminalNode QUATED_STRING() {
            return getToken(XSODataParser.QUATED_STRING, 0);
        }

        public CatalogobjectnameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_catalogobjectname;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XSODataListener)
                ((XSODataListener) listener).enterCatalogobjectname(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XSODataListener)
                ((XSODataListener) listener).exitCatalogobjectname(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XSODataVisitor)
                return ((XSODataVisitor<? extends T>) visitor).visitCatalogobjectname(this);
            else
                return visitor.visitChildren(this);
        }
    }

    public final CatalogobjectnameContext catalogobjectname() throws RecognitionException {
        CatalogobjectnameContext _localctx = new CatalogobjectnameContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_catalogobjectname);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(241);
                match(QUATED_STRING);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class EntitysetContext extends ParserRuleContext {
        public EntitysetnameContext entitysetname() {
            return getRuleContext(EntitysetnameContext.class, 0);
        }

        public EntitysetContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
